# dirtyflags

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  poetry_pub_pypi  poetry_publish_dirtyflags.yml  poetry_publish_pypi.yml
src/dirtyflags/: __init__.py  dirtyflags.py
tests/: test_dirtyflags.py
