#[tool.poetry]
#name = "dirtyflags"
#version = "1.0.7"
#license = "BSD-3-Clause"
#description = "dirtyflags is a simple Python decorator that tracks when and which instance attributes have changed."
#authors = ["jamesxcode <james.x.johnson@gmail.com>"]
#readme = "README.md"
#repository = "https://github.com/jamesxcode/dirtyflags"
#packages = [{ include = "dirtyflags", from = "src" }]

#[tool.poetry.dependencies]
#python = "^3.8"

#[tool.poetry.group.dev.dependencies]
#pytest = "^7.1.3"
##pyinstrument = "^4.3"
#pylint = "^2.15.4"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"

[project]
name = "dirtyflags"
version = "1.0.7"
description = "dirtyflags is a simple Python decorator that tracks when and which instance attributes have changed."
authors = [{ name = "James Johnson", email = "james.x.johnson@gmail.com" }]
readme = "README.md"

[project.urls]
repository = "https://github.com/jamesxcode/dirtyflags"



[tool.pylint.main]
ignore-paths = "tests"

[tool.pylint.format]
max-line-length = 120
