[project]
name = "dirtyflags"
version = "1.4.0"
description = "dirtyflags is a simple Python decorator that tracks when and which instance attributes have changed."
authors = [{ name = "James J Johnson", email = "james.x.johnson@gmail.com" }]
readme = "README.md"

[project.urls]
repository = "https://github.com/jamesxcode/dirtyflags"



#[tool.pylint.main]
#ignore-paths = "tests"

#[tool.pylint.format]
#max-line-length = 120
